e2e/tests/all/snapshots/divider_rest_desktop.snap
---
source: e2e/src/suite.rs
description: divider at desktop (rest)
expression: tree
---
paragraph
  StaticText "Above"
separator
separator "Or continue with"
  generic
    StaticText "Or continue with"
paragraph
  StaticText "Left"
separator "Or"
  generic
    StaticText "Or"
paragraph
  StaticText "Right"
