e2e/tests/all/snapshots/divider_rest_mobile.snap
---
source: e2e/src/suite.rs
description: divider at mobile (rest)
expression: tree
---
paragraph
  StaticText "Above"
separator [orientation=horizontal]
separator "Or continue with" [orientation=horizontal]
  StaticText "Or continue with"
paragraph
  StaticText "Left"
separator "Or" [orientation=vertical]
  StaticText "Or"
paragraph
  StaticText "Right"
