e2e/tests/all/snapshots/drawer_open_desktop.snap
---
source: e2e/src/suite.rs
description: drawer at desktop (open)
expression: tree
---
button "Open navigation"
  StaticText "Open navigation"
dialog "Navigation" [modal]
  heading "Navigation" [level=3]
    StaticText "Navigation"
  link "Home"
    StaticText "Home"
  button "Close"
    StaticText "Close"
