e2e/tests/all/snapshots/drawer_rest_desktop.snap
---
source: e2e/src/suite.rs
description: drawer at desktop (rest)
expression: tree
---
button "Open navigation"
  StaticText "Open navigation"
