e2e/tests/all/snapshots/drawer_rest_mobile.snap
---
source: e2e/src/suite.rs
description: drawer at mobile (rest)
expression: tree
---
button "Open navigation"
  StaticText "Open navigation"
